--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-watch": "~0.4.4"
   }
+  "scripts": {
+    "build": "grunt --verbose"
+  }
 }
 
