--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-uglify": "~0.2.2",
-    "grunt-contrib-watch": "~0.4.4"
+    "grunt-contrib-watch": "~0.4.4",
+    "grunt-contrib-jasmine": "~0.5.2",
+    "grunt-contrib-jshint": "~0.6.4"
   },
   "scripts": {
     "build": "grunt --verbose"
   }
 }
-
