--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-uglify": "~0.2.2",
-    "grunt-contrib-watch": "~0.5",
+    "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-jasmine": "~0.5.2",
     "grunt-contrib-jshint": "~0.7"
   },
   "scripts": {
     "build": "grunt --verbose",
     "test": "grunt test --verbose"
+  },
+  "dependencies": {
+    "grunt-complexity": "~0.1.3"
   }
 }
