--- a/package.json
+++ b/package.json
@@ -6,13 +6,11 @@
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-jasmine": "~0.5.2",
-    "grunt-contrib-jshint": "~0.7"
+    "grunt-contrib-jshint": "~0.7",
+    "grunt-complexity": "~0.2.0"
   },
   "scripts": {
     "build": "grunt --verbose",
     "test": "grunt ci --verbose"
-  },
-  "dependencies": {
-    "grunt-complexity": "~0.2.02.0"
   }
 }
