--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "authors": [
     "Brandon Morrison <brandon@brandonmorrison.com>"
   ],
+  "main": "dist/geocoder.min.js",
   "license": "MIT",
   "private": true,
   "ignore": [
