Allow for es6 style consumption of repo
```
  import geocoderJS from 'geocoder-js';
```

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "geocoder-js",
+  "main": "./dist/GeocoderJS.js",
   "version": "0.0.0",
   "devDependencies": {
     "grunt": "~0.4.1",
