--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "geocoder-js",
-  "main": "./dist/GeocoderJS.js",
+  "main": "./dist/geocoder.js",
   "version": "0.0.0",
   "devDependencies": {
     "grunt": "~0.4.1",
