--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "universal",
     "node",
     "browser",
-    "react-native"
+    "react-native",
+    "electron"
   ],
   "license": "(MIT AND GPL-2.0)",
   "author": "Brandon Morrison <brandon@brandonmorrison.com>",
@@ -35,6 +36,8 @@
   },
   "devDependencies": {
     "@types/jasmine": "^3.5.0",
+    "@types/node": "^14.0.0",
+    "@types/webpack-env": "^1.15.0",
     "@typescript-eslint/eslint-plugin": "^3.2.0",
     "@typescript-eslint/parser": "^3.2.0",
     "@zerollup/ts-transform-paths": "^1.7.0",
@@ -58,11 +61,12 @@
     "webpack-merge": "^4.2.0"
   },
   "scripts": {
-    "build": "rm -rf types && webpack --config webpack.dev.js && webpack --config webpack.prod.js && ttsc",
+    "build": "rm -rf types && rm -rf dist && webpack --config webpack.dev.js && webpack --config webpack.prod.js && ttsc",
     "lint": "eslint --fix --ext .ts .",
     "prepublishOnly": "npm run build",
     "serve": "http-server",
     "test": "ts-node --compiler ttypescript -r tsconfig-paths/register node_modules/.bin/jasmine",
+    "ts-node": "ts-node --skip-project",
     "watch": "webpack --config webpack.dev.js --watch"
   }
 }
