--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,7 +38,7 @@ jobs:
           node-version: "14"
           registry-url: https://npm.pkg.github.com
       - name: Change package name
-        uses: datamonsters/replace-action
+        uses: datamonsters/replace-action@v2
         with:
           files: package.json
           replacements: '"name": "universal-geocoder","name": "@universal-geocoder/universal-geocoder"'
