--- a/couscous.yml
+++ b/couscous.yml
@@ -14,6 +14,12 @@ menu:
         provider_usage:
           text: 🔎️ Provider Usage
           relativeUrl: docs/provider_usage.html
+    special_provider_usage:
+      name: Special Provider
+      items:
+        chain:
+          text: ⛓️ Chain
+          relativeUrl: docs/provider_usage/chain.html
     provider_usage:
       name: Provider
       items:
