feat: better Bing provider (#12)
Add `precision` to `OpenCageGeocoded`.
Replace `minConfidence` with `minPrecision` for geocode and geodecode.
Use `FlatCoordinates`.

--- a/couscous.yml
+++ b/couscous.yml
@@ -41,6 +41,9 @@ menu:
         mapquest:
           text: 📌️ MapQuest
           relativeUrl: docs/provider_usage/mapquest.html
+        bing:
+          text: 📌️ Bing Maps
+          relativeUrl: docs/provider_usage/bing.html
         yandex:
           text: 📌️ Yandex
           relativeUrl: docs/provider_usage/yandex.html
